fixed z-index

--- a/Exaxxi/Exaxxi/wwwroot/css/demo.css
+++ b/Exaxxi/Exaxxi/wwwroot/css/demo.css
@@ -10,6 +10,7 @@
     -webkit-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
     box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
+    z-index:999!important;
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
@@ -1357,7 +1358,7 @@ img {
     position: absolute;
     top: 100px;
     left: 0px;
-    z-index: 999999;
+    z-index: 99;
     color: #e8e8e8;
     cursor: pointer;
     transition: 0.3s;
@@ -1366,7 +1367,7 @@ img {
     position: absolute;
     top: 100px;
     right: 0px;
-    z-index: 999999;
+    z-index: 99;
     color: #e8e8e8;
     cursor:pointer;
     transition: 0.3s;
